# sloppygen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: corpus-format.md  shapes.md
examples/: README.md  audit_baseline.py  naive_parser.py  pytest_regression.py
scripts/: smoke.sh
src/sloppygen/: __init__.py  __main__.py  baseline.py  check.py  cli.py  corpusio.py  engine.py  errors.py  payload.py  registry.py  rng.py  shapes_body.py  shapes_stream.py  shapes_wrap.py  textops.py
tests/: conftest.py  test_baseline.py  test_check.py  test_cli.py  test_corpus.py  test_determinism.py  test_engine.py  test_payload.py  test_readme_example.py  test_registry.py  test_shapes_body.py  test_shapes_stream.py  test_shapes_wrap.py  test_textops.py
